# rreader

./: .gitignore  LICENSE  README.md  README.rst  setup.py
rreader-python/: build-i386.sh  build-standalone.sh  pyproject.toml  rreader.spec
rreader-python/src/rreader/: config.py  feeds.json  gemini.py  get_rss.py  run.py
rreader-rust/: Cargo.toml  build-i386.sh  feeds.json
rreader-rust/src/: main.rs
rreader-web/: crontab.example  feeds.json  generate.py  pyproject.toml  run.sh
rreader-web/.claude/: settings.local.json
rreader_src/: common.py  feeds.json  get_rss.py  run.py
