[package]
name = "rreader"
version = "1.2.0"
edition = "2021"
authors = ["rreader"]
description = "A command-line RSS reader"
license = "MIT"

[dependencies]
# RSS parsing
rss = "2.0"
atom_syndication = "0.4"
# HTTP client (blocking, lightweight for i386)
ureq = { version = "2.9", features = ["native-certs"] }
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time
chrono = { version = "0.4", features = ["serde"] }
# TUI
crossterm = "0.27"
ratatui = "0.26"
# Misc
dirs = "5.0"
anyhow = "1.0"
open = "5.0"
unicode-width = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true

# For i386 cross-compilation, use:
# rustup target add i686-unknown-linux-gnu
# cargo build --release --target i686-unknown-linux-gnu
